Clean up and bugfix

--- a/Reseptivarasto/Reseptivarasto.csproj
+++ b/Reseptivarasto/Reseptivarasto.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IngredientModel.cs" />
+    <Compile Include="Models\IngredientModel.cs" />
     <Compile Include="ModifyRecipe.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,7 +67,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReseptiModel.cs" />
+    <Compile Include="Models\ReseptiModel.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
